assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Raleway:wght@300;400;500&display=swap');
Sans-serif

header {
    margin: 0;
    padding: 0;
    height: 80px; 
}

body {
    padding: 0;
    
}

section {
    padding: 0;
    margin: 0;
}

.container-fluid {
    padding-left: 0px;
    padding-right: 0px;
}


p {
    font-family: 'Raleway', sans-serif;
    font-size: 20px;
    font-weight: 500;
    text-align: center;
    padding-bottom: 20px;
    margin-bottom: 0px;
    margin: 5px;
    padding: 5px;
}

h3 {
    text-align: center;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    padding: 20px;
}

/*-------Background-----*/

.services,
.coach,
.timetable,
.sign-up {
   background: url(../images/light-background.jpg) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  width: 100%;
  height: auto;

}


/*-------Navigation-----*/

.menu {
    background-color: #072446;
}

nav {
    padding: 0;
}

/*-------Logo-----*/
.logo h1 {
   color: #fafafa;
   font-family: 'Monstserrat', sans-serif ;
   font-weight: 600;
   text-decoration: none;
}


.logo a i {
    color: #fafafa;
    line-height: 45px;
    font-size: 40px;
    text-decoration-line: none;
    padding-left: 20px;
}

.logo a {
    text-decoration: none;
}



.header-icon:hover {
    color: #e1aa12;
    text-decoration: none;
}

.header-icon {
    color: #fafafa;
    line-height: 45px;
    font-size: 40px;
    text-decoration-line: none;
    padding-left: 20px;
    font-family: 'Monstserrat', sans-serif ; 
} 


.navbar-light .navbar-toggler {
    background-color: #e1aa12;
    padding: 10px;
    margin: 15px;
    float: right;
}

.navbar-light .navbar-nav .nav-link {
    color: #fafafa;
    font-family: 'Monstserrat', sans-serif;
    font-size: x-large;
    text-align: right;
    padding-right: 20px;
}

.navbar-light .navbar-nav .nav-link:hover {
    color: #e1aa12;
}

.navbar-brand2 {
    color: #fafafa;
    text-decoration: none;
    text-decoration-line: none;
}


.menu li {
  color: #fafafa;

}

.navbar-expand-lg .navbar-collapse{
    background-color: #072446;
    
}

#mynav li a {
    float: right;
}

/*-------heading-----*/

.uppercase {
    text-align: center;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 700;
    padding: 20px;
    margin: 10px 0px;
    text-transform: uppercase;
    color: #24292e;
}
/*-----------Hero Image------*/
.hero-image {
    width: 100%;
    height: auto;
    padding: 0;
}

.hero-image img {
   padding: 0;
   margin: 0;
   height: auto;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  min-width: 100%;
  
  

}
/*-----------about------*/

.about {
    background-color: #e1aa12;
    width: 100%;
    height: max-content;
    padding-top: 3.5rem;
    margin-bottom: 0;
    min-width: 100%;
}

.about p {
    font-family: 'Raleway', sans-serif;
    font-weight: 500;
    text-align: center;
    width: 90%;
    padding: 0 10px 20px 10px;
}

/*-----------services------*/

#services {
   padding-top: 3.5rem;
}

.service-item {
    padding: 0;
    margin: 0;
}

.services-heading {
    padding: 0;
}

.services h3 {
    text-align: center;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    padding: 20px;
}

.s-container {
    background-color: #008089;
    width: 360px;
    min-height: 620px;
    max-height: fit-content;
    padding: 10px;
    margin: 10px auto;
    border: solid;
    border-color: #072446;
    border-radius: 5px;
}



/*-----------Coaches------*/

#team {
    padding-top: 3.5rem;
}

.coach-img  {
    border-radius: 50%;
    padding: 5px;
    margin: 10px auto;
    border-color: #e1aa12;
    border: solid;
    width: 100%;
    
}

.weight-coach {
    
    width: 100%;
    border-radius: 50%;
}

.team {
    background-color: #013a67;
    width: 360px;
    min-width: fit-content;
    padding: 20px;
    margin: 10px auto;
    border: solid;
    border-color: #e1aa12;
    border-radius: 10px;
    color: #e1aa12;
    display: inline-block;
    min-height: 40rem;
}

.team-paul {
   min-height: 40rem;
}

 


.social-coach {
    color: #e1aa12;
}

.social-coach:hover {
    color: #fafafa;
}

.follow-coach {
    text-align: center;
}

/*-----------Timetable------*/



.table {
    text-align: center;
    font-family: 'Raleway', sans-serif;
    background-color: #008089;
    border: solid 1em #072446;
    border-radius: 5px;
    margin: 20px 0px 20px 20x;
}

.table {
    max-width: 70%;
    margin: 5px auto
}

#timetable p {
    color: #24292e;
}

#timetable {
    min-height: fit-content;
    padding: 5px;
    padding-top: 3.5rem;
    width: 70%;
}

.table-title th {
    text-align: center;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    border: solid 5px #072446;
    
}

tbody {
    border: solid 5px #072446;

}

.table-border th {
    border: solid 5px #072446;
}

.table-border td {
    border: solid 5px #072446;
}


.schedule {
    margin: 25px;
    border: 5px;
    padding: 5px;
}


/*-----------SignUp------*/

#signup {
    padding-top: 3.5rem;
}

.sign-up {
   padding-bottom: 20px;
}

.sign-up p {
    color: #24292e;
}

.members-form {
    padding: 20px 60px;
    margin: 10px auto;
    max-width: 70%;
    background-color: #e1aa12;
    border: solid 2px;
    border-color: #072446;
    border-radius: 5px;
}

button[type="submit"] {
   padding-top: 15px;
   padding-bottom: 15px;
   color: #fafafa;
   background-color: #072446;
   margin: 15px auto;
   font-family: 'Monstserrat', sans-serif;
   font-weight: 600;
   
   
}

input {
    padding: 5px 0;
    margin-bottom: 20px;
    margin-top: 20px;
    margin-left: 5px;
}


/*-----------Footer---*/

footer {
    background-color: #072446;
    min-height: 120px;
    padding: 10px;
    margin-top: 0px;
    width: 100%;
}


.footer-heading {
    color: #fafafa;
    margin-right: 9px;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    padding: 0px;
    text-transform: uppercase;
    margin-top: 10px;
    float: left;

}

.heading-socials {
    text-align: right;
    margin-bottom: 8px;
    margin-right: 12px;
    margin-left: 0px;
    padding-bottom: 0px;
    padding-top: 0px;
    padding-right: 20px;
    color: #fafafa;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    text-transform: uppercase;
}

.social-link {
    color: #fafafa;
    font-size: 40px;
    padding: 2px;
    margin: 10px;
    display: inline-block;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out; 
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social {
    float: right;
    margin-top: 5px;
    margin-bottom: 10px;
}


.social-link:hover {
    color: #e1aa12;
}

.contact-details {
    color: #fafafa;
    margin-bottom: 5px;
    display: block;
    clear: both;
}

.contact-details .key,
.contact-details .value {
    padding-right: 8px;
    display: inline-block;
    justify-content: left;
    margin-bottom: 10px;
}

.contact-details .key p,
.contact-details .value p {
    padding-left: 2px;
    padding-bottom: 0;
    margin-left: 10px;
    margin-top: 10px;

    
}

.contact-details .key {
    width: 40%;
    align-items: center;
    margin-right: 5px;
    padding-top: 2px;
    vertical-align: top;
}

.contact-details .key p {
    font-weight: 400;
    font-family: 'Monstserrat', sans-serif;
    text-align: left;
}

.contact-details .value p {
    position: relative;
    font-weight: 300;
    text-align: right;
    margin-left: 0px;
    padding-left: 0px;
    
}

.footer-contact {
    margin-left: 12px;
    margin-top: 10px;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    padding: 0px;
    text-transform: uppercase;
    text-align: left;
    color: #fafafa;
}


.circle {
    width: 60%;
    height: 140px;
    border-radius: 50%;
    background-color: #e1aa12;
    margin: 10px auto;
    padding: 2px;
}

.circle-inner {
    display: block;
    color: #fafafa;
    position: relative;
}

.circle-inner h3 {
    display: block;
    color: #fafafa;
    line-height: 45px;
    font-size: 40px;
    text-decoration-line: none;
    padding-left: 20px;
    font-family: 'Monstserrat', sans-serif ;
}

.circle-inner h3 i {
    display: block;
}




/*-----------Video------*/

.video h3{
    text-align: center;

}

.video {
    width: 70%;
    margin: 20px auto;

}

.workout {
    align-content: center;
}


/*-----------Media------*/

@media screen and (max-width: 1020px) {
    
    .footer-contact ,
    .heading-socials {
        display: block;
        text-align: center;
    }

    .heading-socials {
       margin-top: -40px;
    }

    .contact-details {
        
        display: inline-block;
    }

    .contact-details .key ,
    .contact-details .value {
        width: 100%;
    }

    .social {
        float: none;
        text-align: center;
        margin-top: -10px;
        margin-bottom: 2px;
        padding-bottom: 4px;

    }

    .contact-details .key p,
    .contact-details .value p {
     
     display: inline-flex;
    }

    .call {
        justify-content: left;
    }

    #email {
        text-align: right;
        margin-left: 70px;
        margin-right: 0px;
        padding-right: 0px;
    }

    #email-address {
        text-align: right;
        margin-left: 70px;
        margin-right: 0px;
        padding-right: 0px;
    }

}

@media screen and (max-width: 575.98px) {
    #timetable {
        max-width: 80%;
    }

    .table-title tr th {
      padding-left: 0px;
      padding-right: 0px;
      margin-right: 0px;
      margin-left: 0px;

    }

    .table-border tr th {
      padding-left: 0px;
      padding-right: 0px;
      margin-left: 0px;
      margin-right: 0px;
    }

    .table {
        margin: 0px;
    }

    .table-border td {
      padding-left: 0px;
      padding-right: 0px;
    }

    #timetable h2 {
        padding-left: 90px;
    }

    #timetable p {
        padding-left: 80px;
        margin: 10px auto;
        padding-right: 0px;
    }

    .table-responsive-sm {
        margin: 10px auto;
        padding-left: 10px;
    }

    td {
        padding-left: 0px;
        padding-right: 0px;
    }

    .contact-details .key p,
    .contact-details .value p {
        display: inline;
    }

    .contact-details .key p {
        float: left;
        padding-left: 20px
    }

    .contact-details .value p {
        float: right;
        margin-top: -60px;
        padding-right: 20px;
        margin-right: 5px;
        padding-left: 30px;
    }

    .footer-contact {
        margin-left: 0px;
        margin-right: 12px;
        margin-bottom: 0px;
    }

    .footer-contact ,
    .heading-socials {
        display: block;
        text-align: center;
    }

    .heading-socials {
       margin: 0;
       padding: 0;
    }

    .contact-details .key ,
    .contact-details .value {
        width: 100%;
        margin: 0px;
        padding: 0;
    }

    .contact-details .value {
        padding-left: 50px;
    }

    .social {
        float: none;
        text-align: center;
        margin-bottom: 2px;
        padding-bottom: 4px;
    }

   

    .call {
        text-align: center;
        padding: 0;
        margin: 0;
    }

    #email {
        text-align: center;
        padding: 0;
        margin: 0px 0px 5px 0px;
    }

    #email-address {
        text-align: center;
        padding-left: 30px;
        margin-left: 0px;
        margin-bottom: 5px;
    
    }

    .team {
        width: 360px;
        height: 680px;
        margin: 10px 10px;
    }

}

